[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Pet.gd" type="Script" id=1]
[ext_resource path="res://ressources/Light/light.png" type="Texture" id=2]
[ext_resource path="res://ressources/graphics/pet/Frame001.png" type="Texture" id=3]
[ext_resource path="res://ressources/graphics/pet/Frame002.png" type="Texture" id=4]
[ext_resource path="res://ressources/graphics/pet/Pet_sleep/Frame001.png" type="Texture" id=5]
[ext_resource path="res://ressources/graphics/pet/Pet_sleep/Frame002.png" type="Texture" id=6]
[ext_resource path="res://ressources/sounds/pet/hover.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Fly",
"speed": 1.75
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "sleep",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.9332, 24.2381 )

[node name="Pet" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
script = ExtResource( 1 )

[node name="Camera2D_Pet" type="Camera2D" parent="."]

[node name="LightPet" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.8
color = Color( 0, 1, 1, 1 )
energy = 1.5
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 1.0
shadow_filter = 3
shadow_filter_smooth = 25.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = 1
frames = SubResource( 1 )
animation = "Fly"
playing = true

[node name="CollisionShape2D_Pet" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StaticHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
max_distance = 5000.0
attenuation = 0.196146
bus = "PetLoop"
